Implemented updateScore, finishMatch, and matchesSummary methods. Enhanced unit test cases to cover new functionality. Introduced new exception classes for improved error handling.